fixed submit button alignment

--- a/src/styles/screens/Contact.css
+++ b/src/styles/screens/Contact.css
@@ -29,8 +29,7 @@
 }
 
 .submit-button {
-  display: flex;
-  align-content: center;
+  text-align: center;
   justify-self: center;
   width: 3.2rem;
 }
